[package]
name = "bandwidth-rs"
version = "0.1.0"
authors = ["QaQAdrian"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.27.2"
netstat2 = "0.9.1"
nix = "0.19.0"


[lib]
name = "network_traffic"
crate-type = ["dylib"]