[package]
name = "network-traffic"
version = "0.1.0"
authors = ["blabla-yy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.34.0"
netstat2 = "0.9.1"
nix = "0.26.2"
serde_json = "1.0.108"
serde = { version = "1.0.192", features = ["derive"] }

#[lib]
#name = "NetworkTraffic"
#crate-type = ["staticlib"]